httpd-deploy-file.yaml
#Deployment file
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpd-deployment-file
  labels: 
    app: httpd-app 
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: httpd-app 
  template: 
    metadata: 
      labels: 
        app: httpd-app 
    spec: 
      containers: 
      - name: httpd-container
        image: gcr.io/google-samples/hello-app:1.0
        ports: 
        - containerPort: 8080
