nginx-deploy-file.yaml
#Deployment file
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment-file
  labels: 
    app: nginx-app 
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nginx-app 
  template: 
    metadata: 
      labels: 
        app: nginx-app 
    spec: 
      containers: 
      - name: nginx-container
        image: nginx
        ports: 
        - containerPort: 80
