httpd-service-file.yaml
# Service file

apiVersion: v1
kind: Service
metadata: 
  name: httpd-service-file
  labels: 
    app: httpd-app
    #  annotations:
    # cloud.google.com/neg: '{"ingress": true}'
spec: 
  selector:
    app: httpd-app
  type: NodePort 
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30005
