nginx-service.yaml
# Service file

apiVersion: v1
kind: Service
metadata: 
  name: nginx-service-file
spec: 
  selector:
    app: nginx-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30005
